--- a/app/frontend/src/app/pages/search/search.component.html
+++ b/app/frontend/src/app/pages/search/search.component.html
@@ -24,7 +24,7 @@
             <!-- FITLERS -->
             <!-- ///////////////// -->
             <discovery-filters [parentSpinner]="spinner" (emitServerError)="showServerError($event)" (emitHideFilters)="hideSideNavFilters()"
-              (emmitFilters)="submitSelectedFilters($event)">
+              (emmitFilters)="submitSelectedFilters($event)" (emitReset)="reset($event)">
             </discovery-filters>
             <!-- ///////////////// -->
             <!-- TABS AREA -->
