--- a/app/frontend/src/assets/autocomplete/easy-autocomplete.css
+++ b/app/frontend/src/assets/autocomplete/easy-autocomplete.css
@@ -289,6 +289,10 @@
   position: absolute;
   width: 100%;
   z-index: 2;
+  max-height: 250px;
+  overflow-y: auto;
+  /* border-bottom: 1px solid #000; */
+  box-shadow: 0px 1px 3px #eee;
 }
 .easy-autocomplete-container ul {
   background: none repeat scroll 0 0 #ffffff;
