New autocomplete updates

--- a/app/frontend/src/app/common/hero.component.css
+++ b/app/frontend/src/app/common/hero.component.css
@@ -18,9 +18,10 @@ select {
   border-bottom-color: #fff;
   border-left-color: #fff;
 }
-.autocomplete input[type='text'] {
+
+.autocomplete-drop {
   border-radius: 0px;
-  width: 300px;
+  width: 360px;
 }
 
 #error-msg {
