--- a/app/frontend/src/app/pages/search/filters.component.css
+++ b/app/frontend/src/app/pages/search/filters.component.css
@@ -28,6 +28,9 @@
   display: none;
   width: auto;
 }
+select {
+  height: 4.6rem;
+}
 @media (min-width: 980px) {
   .usa-width-one-fourth {
     float: left;
