--- a/app/frontend/src/app/pages/search/search.component.html
+++ b/app/frontend/src/app/pages/search/search.component.html
@@ -141,7 +141,7 @@
                                     <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
                                       <div class="row-naics toggle_more" [class.show_all]="more_info">
                                         <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show"
-                                          [items]="vehicle.naics" [key]="'code'"></discovery-list>
+                                          [items]="vehicle.naics" [key]="'id'"></discovery-list>
                                         <div class="gradient"></div>
                                       </div>
                                     </td>
@@ -153,7 +153,7 @@
                                     <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
                                       <div class="row-pscs toggle_more" [class.show_all]="more_info">
                                         <discovery-list [show_all]="true" [id]="vehicle.id" [items_to_show]="num_show"
-                                          [items]="vehicle.pscs" [key]="'code'"></discovery-list>
+                                          [items]="vehicle.pscs" [key]="'id'"></discovery-list>
                                         <div class="gradient"></div>
                                       </div>
                                     </td>
