--- a/app/frontend/src/styles.css
+++ b/app/frontend/src/styles.css
@@ -205,7 +205,7 @@ footer hr {
 }
 .btn-add {
   width: 50px !important;
-  height: 4.4rem !important;
+  height: 4.6rem !important;
   margin-top: 0px !important;
   position: absolute;
 }
@@ -234,12 +234,12 @@ ul.items-selected li a {
   background-position: center;
   background-size: 100% 100%;
 }
-.form-horizontal input[type='text'],
+/* .form-horizontal input[type='text'],
 .form-horizontal select,
 .form-horizontal button {
   display: inline-block !important;
   margin-right: 0px !important;
-}
+} */
 /* START scrollwindows */
 .scroll-view-topscroll,
 .scroll-view,
@@ -469,47 +469,8 @@ ul.items-selected li a {
 .easy-autocomplete .easy-autocomplete-container {
   width: 500px !important;
 }
-.autocomplete {
-  position: relative;
-  display: inline-block;
-}
-.autocomplete .autocomplete-items,
-.ng-autocomplete-items {
-  max-height: 300px;
-  overflow-y: auto;
-  box-shadow: 0px 2px 4px #ddd;
-  border-bottom: 1px solid;
-  text-align: left !important;
-}
-.autocomplete-items,
-.ng-autocomplete-items {
-  position: absolute;
-  border: 1px solid #d4d4d4;
-  border-bottom: none;
-  border-top: none;
-  z-index: 9999;
-  top: 100%;
-  left: 0;
-  right: 0;
-}
-.autocomplete-items div,
-.ng-autocomplete-items div {
-  padding: 10px;
-  cursor: pointer;
-  background-color: #fff;
-  border-bottom: 1px solid #d4d4d4;
-}
-.autocomplete-items div:hover,
-.ng-autocomplete-items div:hover,
-.ng-autocomplete-items div:focus {
-  background-color: #e9e9e9;
-}
-.autocomplete-active {
-  background-color: #0071bc !important;
-  color: #ffffff;
-}
 #search-gen {
-  width: 550px !important;
+  width: 590px !important;
   padding: 30px 0;
   margin: auto;
 }
@@ -550,7 +511,7 @@ ul.items-selected li a {
   min-height: 35px;
 }
 .input-spinner {
-  background-image: url(/frontend/assets/images/input-loader.gif);
+  background-image: url(/assets/images/input-loader.gif);
   background-repeat: no-repeat;
   background-size: auto 50%;
   background-position: 8px 50%;
