Added Place of performance filter in vendor page Update the about us page design Added the total vendors per vehicle

--- a/app/frontend/src/app/pages/about/about.component.css
+++ b/app/frontend/src/app/pages/about/about.component.css
@@ -1,6 +1,6 @@
 .usa-hero {
-  padding-top: 4em;
-  padding-bottom: 4em;
+  padding-top: 2em;
+  padding-bottom: 2em;
   background-image: url(/frontend/assets/images/hero-about-us.jpg);
 }
 .usa-section-dark p {
@@ -8,4 +8,9 @@
 }
 .usa-width-one-half p {
   color: #fff !important;
+}
+@media screen and (min-width: 481px) {
+  .usa-hero-callout {
+    max-width: 50rem;
+  }
 }
