--- a/app/frontend/src/app/pages/search/search.component.html
+++ b/app/frontend/src/app/pages/search/search.component.html
@@ -108,10 +108,10 @@
                                   </tr>
                                 </thead>
                                 <tbody>
-                                  <!-- <tr>
-                                        <th scope="row">Total vendors</th>
-                                        <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.vendors_total}}</td>
-                                      </tr> -->
+                                  <tr>
+                                    <th scope="row">Total Vendors in Vehicle</th>
+                                    <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.vendors_total}}</td>
+                                  </tr>
                                   <tr>
                                     <th scope="row">Vendors that meet your criteria </th>
                                     <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0"><span
@@ -135,7 +135,7 @@
                           <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">{{vehicle.capabilities}}</td>
                         </tr> -->
                                   <tr>
-                                    <th scope="row">NAICs
+                                    <th scope="row">NAICs in Vehicle
                                       <discovery-lnk-toggle-heights [toggle_id]="'row-naics'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
                                     </th>
                                     <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
@@ -147,7 +147,7 @@
                                     </td>
                                   </tr>
                                   <tr>
-                                    <th scope="row">PSCs
+                                    <th scope="row">PSCs in Vehicle
                                       <discovery-lnk-toggle-heights [toggle_id]="'row-pscs'" (emitToggleId)="toggleTDHeights($event)"></discovery-lnk-toggle-heights>
                                     </th>
                                     <td *ngFor="let vehicle of compare_tbl" [hidden]="vehicle.vendors_results_total===0">
