--- a/app/frontend/src/app/common/hero.component.html
+++ b/app/frontend/src/app/common/hero.component.html
@@ -14,16 +14,12 @@
           </select>
         </div>
         <div class="autocomplete pull-left">
-          <p class="text-white">{{keywords}}</p>
-          <!-- <select id="keyword" name="keywords" class="autocomplete-drop select2-container--default" tabindex="-1"
-            aria-hidden="true" [class.input-spinner]="loading" [disabled]="loading">
-            <option value="0">All</option>
-          </select> -->
-          <!-- <input #keywordInput id="hero-keywords-input" class="eac-square" [class.input-spinner]="loading" pattern=".+"
-            type="text" [(ngModel)]="keywords" name="keywords" [placeholder]="loading?'Loading keywords...':'Start typing your keywords...'"
-            autocomplete="off" [disabled]="loading">
-          <div id="error-msg" class="hide"><em>Please choose from the suggested keywords list.</em></div>
-          <input id="keyword" type="hidden"> -->
+          <div class="loader-container" [class.input-spinner]="loading" *ngIf="loading">Loading keywords...</div>
+          <select id="keyword" name="keywords" class="autocomplete-drop select2-container--default" tabindex="-1"
+            aria-hidden="true" [disabled]="loading">
+            <option id="keyword-0" value="0">Enter your keyword...</option>
+          </select>
+
         </div>
         <div class="pull-left">
           <button type="submit" (click)="searchKeywords()" [disabled]="loading">
