--- a/app/frontend/src/app/pages/search/tbl-contract-history.component.html
+++ b/app/frontend/src/app/pages/search/tbl-contract-history.component.html
@@ -1,24 +1,33 @@
 <h3>Show vendor’s 5 year contract history based on the following filters:</h3>
 <em>Work performed by a vendor is often reported under a different NAICS code due to FPDS restrictions.</em>
 <div class="filters-container">
-  <div class="usa-width-one-twelfth"><strong class="db" style="padding-top:12px">Filter By:</strong></div>
-  <div class="usa-width-one-third">
 
+  <div>
+    <strong class="pull-left" style="padding:12px;">Filter By:</strong>
     <select id="contract_membership" [(ngModel)]="piid" (change)="onChangeMembership()">
       <option value="All">All Contract Memberships</option>
       <option *ngFor="let item of pools" value="{{item.piid}}" [innerHTML]="getVehicleDescription(item.pool.vehicle.id) + '-'+ item.piid"></option>
 
     </select>
-  </div>
-  <div class="usa-width-one-third">
     <select id="select_naic" [disabled]="naics.length===0" (change)="onChangeNaic()" [(ngModel)]="naic_code" class="items-input">
       <option value="All" selected="selected" [innerHTML]="naics.length===0 ? 'Loading...':'All NAICs Codes'"></option>
       <option *ngFor="let item of naics" value="{{item.code}}">{{item.code + ' - ' +
         item.description}}</option>
     </select>
-  </div>
+    <select id="select_country" (change)="onChangeCountry()" [disabled]="!countries" [(ngModel)]="country" class="items-input">
+      <option value="0" selected="selected" [innerHTML]="!countries?'Loading countries...':'Country --'"></option>
+      <option *ngFor="let item of countries" value="{{item.code}}">{{
+        item.name}}</option>
+    </select>
+    <select id="select_state" (change)="onChangeCountry()" [disabled]="!states || country!=='USA'" [(ngModel)]="state"
+      class="items-input" [class.hide]="country!=='USA'">
+      <option value="0" selected="selected">State --</option>
+      <option *ngFor="let item of states" value="{{item.code}}">{{
+        item.code}}</option>
+    </select></div>
+
 </div>
-<div class="pad-top-bottom">
+<div class="pad-top-bottom db">
   <div class="usa-alert usa-alert-info usa-alert-slim" *ngIf="history_no_results">
     <div class="usa-alert-body">
       <p class="usa-alert-text">There are no matching contracts to display</p>
@@ -26,85 +35,80 @@
   </div>
 </div>
 <discovery-spinner *ngIf="spinner"></discovery-spinner>
-<!-- <div class="pad-bottom text-right" *ngIf="!history_no_results">
-  <a href="assets/download-csv.html?vendor={{duns}}&{{params}}" target="_blank">
-    Download
-    vendor data(CSV)</a></div> -->
-<!-- <div class="pad-bottom text-right" *ngIf="!history_no_results">
+<div class="pad-bottom text-right" *ngIf="!history_no_results && !spinner">
   <a href="/vendor/{{duns}}/csv/?{{params}}" target="_blank">
     Download
-    vendor data(CSV)</a></div> -->
-<div id="overflow-contract-history" class="pad-bottom">
+    vendor data(CSV)</a></div>
+<div id="overflow-contract-historyx" class="pad-bottom">
   <!-- Start Scroll Window -->
-  <div class="scroll-view-topscroll scrollbar">
+  <!-- <div class="scroll-view-topscroll scrollbar">
     <div class="scroll-div1">
     </div>
-  </div>
-  <div id="scroll-view" class="scroll-view scrollbar">
-    <div class="scroll-div2 pad-top">
-
-      <table id="tbl-contract-history" class="usa-table-borderless history" *ngIf="!history_no_results">
-        <thead>
-          <tr>
-            <th scope="col"></th>
-            <th scope="col" class="tooltip-bottom" data-tooltip="Sort by Date Signed">
-              <discovery-th-sort [label]="'Date Signed'" [width]="'auto'" [ordering]="'date_signed'"
-                [selectedParentOrdering]="ordering" (emmitOrdering)="orderBy($event)"></discovery-th-sort>
-            </th>
-            <th scope="col" class="tooltip-bottom" data-tooltip="Sort by PIID">
-              <discovery-th-sort [label]="'PIID'" [width]="'auto'" [ordering]="'piid'" [selectedParentOrdering]="ordering"
-                (emmitOrdering)="orderBy($event)"></discovery-th-sort>
-            </th>
-            <th scope="col" class="tooltip-bottom" data-tooltip="Sort by Agency">
-              <discovery-th-sort [label]="'Agency'" [width]="'auto'" [ordering]="'agency_name'"
-                [selectedParentOrdering]="ordering" (emmitOrdering)="orderBy($event)"></discovery-th-sort>
-            </th>
-            <th scope="col" class="tooltip-bottom" data-tooltip="Sort by Price Type">
+  </div> -->
+  <!-- <div id="scroll-view" class="scroll-view scrollbar">
+    <div class="scroll-div2 pad-top"> -->
+  <table id="tbl-contract-history" class="usa-table-borderless history" *ngIf="!history_no_results && !spinner">
+    <thead>
+      <tr>
+        <th scope="col"></th>
+        <th scope="col" class="tooltip-bottom" data-tooltip="Sort by Date Signed">
+          <discovery-th-sort [label]="'Date Signed'" [width]="'auto'" [ordering]="'date_signed'"
+            [selectedParentOrdering]="ordering" (emmitOrdering)="orderBy($event)"></discovery-th-sort>
+        </th>
+        <th scope="col" class="tooltip-bottom" data-tooltip="Sort by PIID">
+          <discovery-th-sort [label]="'PIID & Type'" [width]="'auto'" [ordering]="'piid'" [selectedParentOrdering]="ordering"
+            (emmitOrdering)="orderBy($event)"></discovery-th-sort>
+        </th>
+        <th scope="col" class="tooltip-bottom" data-tooltip="Sort by Agency">
+          <discovery-th-sort [label]="'Agency'" [width]="'auto'" [ordering]="'agency_name'" [selectedParentOrdering]="ordering"
+            (emmitOrdering)="orderBy($event)"></discovery-th-sort>
+        </th>
+        <!-- <th scope="col" class="tooltip-bottom" data-tooltip="Sort by Price Type">
               <discovery-th-sort [label]="'Type'" [width]="'auto'" [ordering]="'pricing_type_name'"
                 [selectedParentOrdering]="ordering" (emmitOrdering)="orderBy($event)"></discovery-th-sort>
-            </th>
-            <th scope="col" class="tooltip-bottom" data-tooltip="Sort by Obligated Amount">
-              <discovery-th-sort [label]="'Value ($)'" [ordering]="'obligated_amount'" [selectedParentOrdering]="ordering"
-                (emmitOrdering)="orderBy($event)"></discovery-th-sort>
-            </th>
-            <th scope="col" class="tooltip-bottom col-small" data-tooltip="Sort by Status">
+            </th> -->
+        <th scope="col" class="tooltip-bottom" data-tooltip="Sort by Obligated Amount">
+          <discovery-th-sort [label]="'Value ($)'" [ordering]="'obligated_amount'" [selectedParentOrdering]="ordering"
+            (emmitOrdering)="orderBy($event)"></discovery-th-sort>
+        </th>
+        <!-- <th scope="col" class="tooltip-bottom col-small" data-tooltip="Sort by Status">
               <discovery-th-sort [label]="'Status'" [width]="'60px'" [ordering]="'status_name'"
                 [selectedParentOrdering]="ordering" (emmitOrdering)="orderBy($event)"></discovery-th-sort>
-            </th>
-            <th scope="col" class="tooltip-bottom col-small" data-tooltip="Sort by NAIC">
-              <discovery-th-sort [label]="'NAIC'" [width]="'40px'" [ordering]="'NAICS'" [selectedParentOrdering]="ordering"
-                (emmitOrdering)="orderBy($event)"></discovery-th-sort>
-            </th>
-            <th scope="col" class="tooltip-bottom col-small" data-tooltip="Sort by PSC">
-              <discovery-th-sort [label]="'PSC'" [width]="'40px'" [ordering]="'PSC'" [selectedParentOrdering]="ordering"
-                (emmitOrdering)="orderBy($event)"></discovery-th-sort>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let contract of contracts_results; let i = index">
+            </th> -->
+        <th scope="col" class="tooltip-bottom col-small" data-tooltip="Sort by NAIC">
+          <discovery-th-sort [label]="'NAIC'" [width]="'40px'" [ordering]="'NAICS'" [selectedParentOrdering]="ordering"
+            (emmitOrdering)="orderBy($event)"></discovery-th-sort>
+        </th>
+        <th scope="col" class="tooltip-bottom col-small" data-tooltip="Sort by PSC">
+          <discovery-th-sort [label]="'PSC'" [width]="'40px'" [ordering]="'PSC'" [selectedParentOrdering]="ordering"
+            (emmitOrdering)="orderBy($event)"></discovery-th-sort>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let contract of contracts_results; let i = index">
 
-            <td scope="row"><span [innerHTML]="getRowNum(i)"></span>.</td>
-            <td>{{contract?.date_signed | date}}</td>
-            <td>{{contract?.base_piid}}</td>
-            <td><strong class="db">{{contract?.agency_name | titlecase}}</strong><span><a href="mailto:{{contract?.point_of_contact}}"
-                  *ngIf="contract?.point_of_contact">Contact e-mail</a></span></td>
-            <td>{{contract.pricing_type?.name}}</td>
-            <td>{{contract?.annual_revenue | currency: 'USD' : 'symbol' : '1.0'}}</td>
-            <td>{{contract.status?.name}}</td>
-            <td>
-              {{contract?.NAICS}}
-            </td>
-            <td>
-              {{contract?.PSC}}
-            </td>
+        <td scope="row"><span [innerHTML]="getRowNum(i)"></span>.</td>
+        <td>{{contract?.date_signed | date}}<br>{{contract.status?.name}}</td>
+        <td>{{contract?.piid}}<br>{{contract.pricing_type?.name}}</td>
+        <td><strong class="db">{{contract?.agency_name | titlecase}}</strong><span><a href="mailto:{{contract?.point_of_contact}}"
+              *ngIf="contract?.point_of_contact">Contact e-mail</a></span></td>
 
-          </tr>
+        <td>{{contract?.annual_revenue | currency: 'USD' : 'symbol' : '1.0'}}</td>
 
-        </tbody>
-      </table>
-    </div>
-  </div>
+        <td>
+          {{contract?.NAICS}}
+        </td>
+        <td>
+          {{contract?.PSC}}
+        </td>
+
+      </tr>
+
+    </tbody>
+  </table>
+  <!-- </div> -->
+  <!-- </div> -->
   <!-- End Scroll Window -->
 </div>
 <div *ngIf="items_total > items_per_page">
