--- a/app/frontend/src/app/pages/search/filters/filter-naics.component.html
+++ b/app/frontend/src/app/pages/search/filters/filter-naics.component.html
@@ -3,8 +3,7 @@
 </button>
 <div id="{{id}}" class="usa-accordion-content" [attr.aria-hidden]="!opened">
   <div class="usa-search">
-    <discovery-autocomplete (emitReset)="reset($event)" (emitCode)="addKeywords($event)" [id]="id" [placeholder]="placeholder"
-      [keywords_results]="keywords_results"></discovery-autocomplete>
+    <discovery-autocomplete (emitCode)="addKeywords($event)" [id]="id" [placeholder]="placeholder" [keywords_results]="keywords_results"></discovery-autocomplete>
   </div>
   <ul *ngIf="items_selected" class="items-selected">
     <li *ngFor="let keyword of items_selected">
