--- a/app/frontend/src/app/common/hero.component.html
+++ b/app/frontend/src/app/common/hero.component.html
@@ -2,7 +2,7 @@
   <div class="usa-grid">
     <div class="usa-width-one-whole text-center">
       <h2>
-        <span class="usa-hero-callout-alt">Search by NAICS, PSC or Keywords to compare contracts</span>
+        <span class="usa-hero-callout-alt">Search by NAICS, PSC, or Keywords to compare contracts</span>
       </h2>
 
       <div id="search-gen" role="search">
