--- a/app/frontend/src/app/pages/contract-vehicles/bmo-info.component.html
+++ b/app/frontend/src/app/pages/contract-vehicles/bmo-info.component.html
@@ -34,7 +34,7 @@
         <div *ngIf="pools.length===0">Loading...</div>
         <ul *ngIf="pools.length>0" class="usa-font-lead">
           <li *ngFor="let pool of pools"><a [routerLink]="['/search']" [queryParams]="{vehicles: 'BMO', service_categories: pool.id}">
-              {{pool.name}} - {{pool.number}}</a></li>
+              {{pool.number}} - {{pool.name}}</a></li>
         </ul>
       </div>
       <div class="usa-width-one-fourth">
