--- a/app/frontend/src/styles.css
+++ b/app/frontend/src/styles.css
@@ -42,6 +42,15 @@ a {
 .uppercase {
   text-transform: uppercase;
 }
+.ul-no-bullets li span {
+  display: inline-block;
+  padding: 3px 6px 3px 6px !important;
+  width: 80% !important;
+}
+.ul-no-bullets li.highlight span {
+  background: #fff1d2 !important;
+  font-weight: bold;
+}
 .pull-right {
   float: right;
 }
